--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <nav>
                     <!--навигация-сайта-->
                         <ul class="nav-list">
-                            <li class="nav-list-item"><a class="nav-list-link current" href="./index.html">Cтудия</a></li>
+                            <li class="nav-list-item current"><a class="nav-list-link current" href="./index.html">Cтудия</a></li>
                             <li class="nav-list-item"><a class="nav-list-link" href="./portfolio.html">Портфолио</a></li>
                             <li class="nav-list-item"><a class="nav-list-link" href="./contacts.html">Контакты</a></li>
                         </ul>
