fix modal input

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                     </div>
                     <div class="agreement-field">
                         <input class="checkbox" type="checkbox" id="agreement">
-                        <label class="agreement-label" for="agreement">Соглашаюсь с рассылкой и принимаю<a class="agreement-label-circs" href=""> Условия договора</a></label>
+                        <label class="agreement-label" for="agreement"><span>Соглашаюсь с рассылкой и принимаю</span> <a class="agreement-label-circs" href=""> Условия договора</a></label>
                     </div>
                     
                     <button class="button-modal-submit" type="submit">Отправить</button>
