--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <h2 class="services-title">Чем мы занимаемся</h2>
                 <ul class="services-list">
                     <li class="services-item">
-                        <img srcset="./images/img1.jpg 1x, ./images/img1@2x.jpg 2x, " src="./images/img1.jpg" alt="десктопные приложения" width="370">
+                        <img srcset="./images/img1.jpg 1x, ./images/img1@2x.jpg 2x" src="./images/img1.jpg" alt="десктопные приложения" width="370">
                         <h3 class="services-list-title">десктопные приложения</h3>
                     </li>
                     <li class="services-item">
